<resources>
    <string name="app_name">喷码机</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textAndrNum">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="status">状态</string>
    <string name="ErrorShow">故障报警显示栏</string>
    <string name="FunctionBt">功能键</string>
    <string name="edit">信息编辑</string>
    <string name="FileManager">文件管理</string>
    <string name="PrintParm">打印参数</string>
    <string name="MachParm">机器参数</string>
    <string name="ServiceMenu">服务菜单</string>
    <string name="NowVersion">当前版本</string>
    <string name="EquipModel">设备型号:</string>
    <string name="HardwareVersion">硬件版本:</string>
    <string name="SoftWareVersion">软件版本:</string>
    <string name="EquipNo">设备号:</string>
    <string name="SeqNo">序列号:</string>
    <string name="EndDay">剩余天数:</string>
    <string name="SvcPwd">服务密码</string>
    <string name="HighMenu">高级菜单</string>
    <string name="SaveSetting">保存\n设置</string>
    <string name="PrintNo1">打印\n头1</string>
    <string name="PrintNo2">打印\n头2</string>
    <string name="PrintNo3">打印\n头3</string>
    <string name="PrintNo4">打印\n头4</string>
    <string name="PrintNo5">打印\n头5</string>
    <string name="PrintNo6">打印\n头6</string>
    <string name="PrintNo7">打印\n头7</string>
    <string name="PrintNo8">打印\n头8</string>
    <string name="DayCode">日期\n代码</string>
    <string name="TimeCode">时间\n代码</string>
    <string name="ProduceCount">产品\n计数</string>
    <string name="InkBoxInfo">耗材\n信息</string>
    <string name="SettingLanguage">更改\n语言</string>
    <string name="SettingTime">更改\n时间</string>
    <string name="SendPrint">发送\n打印</string>
    <string name="CreateMsg">新建\n信息</string>
    <string name="SaveMsg">保存\n信息</string>
    <string name="InsertText">插入\n文本</string>
    <string name="InsertClock">插入\n时钟</string>
    <string name="InsertNo">插入\n序号</string>
    <string name="InsertCode">插入\n条码</string>
    <string name="InsertImg">插入\n图片</string>
    <string name="InsertClazz">插入\n班次</string>
    <string name="InsertPartition">文本\n分区</string>
    <string name="NowMsgName">信息名:</string>
    <string name="NowPrint">已打印:</string>
    <string name="QuickPrint">闪喷状态:</string>
    <string name="StartTime">开始时间:</string>
    <string name="Jet">喷头</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="Reconnection">重连</string>
    <string name="Cancel">返回</string>
    <string name="determine">确定</string>
    <string name="Alarm">维修服务报警:</string>
    <string name="MonthSetting">维修服务月数设定:</string>
    <string name="Downtime">停机</string>
    <string name="BootIcon">选择开机图标:</string>
    <string name="MachineType">机器型号:</string>
    <string name="ManufacturerIcon">制造商图标</string>
    <string name="CustomIcon">自定义图标</string>
    <string name="AdvancePwd">请输入高级密码:</string>
    <string name="ServiceAlarm">服务报警</string>
    <string name="SelectIcon">选择图标</string>
    <string name="Configuration">配置ID</string>
    <string name="DynamicCode">输入动态配置码:</string>
    <string name="MachineId">本机机身号</string>
    <string name="SystemTime">系统时间</string>
    <string name="SystemID">本机ID状态</string>
    <string name="ErrorPwd">密码输入错误,请重试</string>
    <string name="OpenPwd">是否开启密码</string>
    <string name="NewPwd">新密码</string>
    <string name="ConfirPassword">确认新密码</string>
    <string name="PwdNotBlank">密码不能为空</string>
    <string name="PasswordDifferent">两次密码不一样,请重新输入</string>
    <string name="Yes">是</string>
    <string name="No">否</string>
    <string name="internal">内部</string>
    <string name="external">外部</string>
    <string name="prompt">提示</string>
    <string name="NeedSave">是否需要进行保存?</string>
    <string name="SaveSuccessfully">保存成功</string>
    <string name="Print1">打印头1</string>
    <string name="Print2">打印头2</string>
    <string name="Print3">打印头3</string>
    <string name="Print4">打印头4</string>
    <string name="Print5">打印头5</string>
    <string name="Print6">打印头6</string>
    <string name="Print7">打印头7</string>
    <string name="Print8">打印头8</string>
    <string name="TriggerSelection">触发打印选择</string>
    <string name="PrintDelay">打印延时</string>
    <string name="range">范围:1-9999</string>
    <string name="LowLevel">低电平</string>
    <string name="HighLevel">高电平</string>
    <string name="SprinklerLevel">喷头触发电平</string>
    <string name="ReverseMode">颠倒打印模式</string>
    <string name="FlipMode">翻转打印模式</string>
    <string name="FreeColumns">闲喷列数</string>
    <string name="FreeInterval">闲喷间隔</string>
    <string name="NozzleSelection">喷嘴选择</string>
    <string name="Hosts">主机</string>
    <string name="LeftColumn">左列</string>
    <string name="RighColumn">右列</string>
    <string name="SettingsSaved">设置未保存</string>
    <string name="PrintBlank">打印延时不能为空</string>
    <string name="WordControl">字宽控制方式</string>
    <string name="InternalSetting">内部字宽设置</string>
    <string name="RangeForCol">范围:1-9999列/秒</string>
    <string name="ExternalSetting">外部字宽设置</string>
    <string name="RangeForDivsion">范围:1-32分频</string>
    <string name="RepeatedMode">重复打印模式</string>
    <string name="RepeatedPrints">重复打印次数</string>
    <string name="UseCounter">使用计数器显示</string>
    <string name="RepeatInterval">重复打印间隔</string>
    <string name="UseEndSignal">使用产品结束信号</string>
    <string name="SerialNumber1">序列号1</string>
    <string name="SerialNumber2">序列号2</string>
    <string name="SerialNumber3">序列号3</string>
    <string name="SerialNumber4">序列号4</string>
    <string name="Reset">复位</string>
    <string name="Updated">更新</string>
    <string name="ClickModify">(点击时间可进行修改)</string>
    <string name="InterfaceLanguage">界面语言</string>
    <string name="Save">保存</string>
    <string name="Del">删除</string>
    <string name="Add">添加</string>
    <string name="SecondVariable">秒钟变量</string>
    <string name="MinuteVariable">分钟变量</string>
    <string name="HourVariable">小时变量</string>
    <string name="Delimiter">分隔符号</string>
    <string name="other">其他</string>
    <string name="TimeFormat">时间格式</string>
    <string name="selectDateFormat">请先选择需要保存的日期格式</string>
    <string name="SelectDelDateFormat">请选择要删除的日期格式</string>
    <string name="NoCartridge">未获取到墨盒信息,请稍后再试!</string>
    <string name="InkModel">墨水型号:</string>
    <string name="InkCode">墨水代码:</string>
    <string name="InkVolume">墨水余量:</string>
    <string name="ProductionDate">生产日期:</string>
    <string name="EffectiveDate">有效日期:</string>
    <string name="KeySound">按键声音</string>
    <string name="LengthDisplay">长度单位显示</string>
    <string name="HostTriggerLevel">主机触发电平</string>
    <string name="AllReset">全复位</string>
    <string name="ProductInspections">产品检测数</string>
    <string name="ProductPrints">产品打印数</string>
    <string name="LastResetTime">上一次复位时间</string>
    <string name="TotalProduct">产品总检测数</string>
    <string name="TotalProductPrints">产品总打印数</string>
    <string name="PrintoutsReset">是否对产品检测数和打印数进行复位?</string>
    <string name="SuccessfulReset">复位成功</string>
    <string name="FullResetSuccessful">全复位成功</string>
    <string name="AllPrintsReset">是否对产品总检测数和总打印数进行复位?</string>
    <string name="SelectTime">请先选择需要保存的时间格式</string>
    <string name="SelectDelTme">请选择要删除的时间格式</string>
    <string name="DateFormat">日期格式</string>
    <string name="DaysVariable">天数变量</string>
    <string name="WeeklyVariable">星期变量</string>
    <string name="MonthVariable">月份变量</string>
    <string name="YearVariable">年份变量</string>
    <string name="Type">类型</string>
    <string name="Stored">已存储</string>
    <string name="Storable">可存储</string>
    <string name="information">信息</string>
    <string name="pattern">图案</string>
    <string name="Font">字体</string>
    <string name="ImportFont">导入字体</string>
    <string name="ExportFont">导出字体</string>
    <string name="DelFont">删除字体</string>
    <string name="FileName">文件名</string>
    <string name="FileSize">文件大小</string>
    <string name="ChangeTime">修改时间</string>
    <string name="FolderEmpty">文件夹是空的</string>
    <string name="NotFindFont">未找到本地字体文件</string>
    <string name="FontLimit">字体存储已达上限</string>
    <string name="ChoseDelFile">请先选择要删除的文件</string>
    <string name="WaitForDel">正在删除文件,请稍等</string>
    <string name="FileDel">文件已删除!</string>
    <string name="UdiskDetected">未检测到U盘,请重试!</string>
    <string name="WairForExport">正在导出到U盘,请稍等</string>
    <string name="FileExportOk">文件导出完成!</string>
    <string name="FileCopyOk">文件复制完成!</string>
    <string name="ImportPattern">导入图案</string>
    <string name="ExportPattern">导出图案</string>
    <string name="DeletePattern">删除图案</string>
    <string name="WaitForCopy">正在复制中,请稍等</string>
    <string name="NoPattern">未找到本地图案文件</string>
    <string name="PatternLimit">图案存储已达上限!</string>
    <string name="ChoseMsg">选择信息</string>
    <string name="ImportMsg">导入信息</string>
    <string name="ExportMsg">导出信息</string>
    <string name="DelMsg">删除信息</string>
    <string name="InformationFound">未找到本地信息文件</string>
    <string name="InformationLimit">信息存储已达上限!</string>
    <string name="ChooseOne">无法多选</string>
    <string name="SelectMsgShow">请选择要展示的信息</string>
    <string name="spacing">字间距</string>
    <string name="FontDirection">字体方向:</string>
    <string name="DataLength">设置数据长度</string>
    <string name="DataSources">数据来源</string>
    <string name="fontSize">字体大小</string>
    <string name="Typeface">选择字体:</string>
    <string name="FontTilt">字体倾斜</string>
    <string name="BoldFont">字体加粗</string>
    <string name="Underline">下划线</string>
    <string name="Textcontent">文本内容</string>
    <string name="NONO">序号编号</string>
    <string name="CurrentValue">目前值</string>
    <string name="repeattimes">重复次数</string>
    <string name="Steplength">步长</string>
    <string name="Firstlimit">第一限定值</string>
    <string name="Secondlimit">第二限定值</string>
    <string name="Pre_zero">前置零</string>
    <string name="OpenSprinklers">开启喷头数量</string>
    <string name="NewName">新建信息名</string>
    <string name="Patternname">图案名称</string>
    <string name="Patternscaling">图案缩放</string>
    <string name="Patterndirection">图案方向</string>
    <string name="BarcodeType">条码类型</string>
    <string name="BarCodeSize">条码尺寸</string>
    <string name="BarCodeDirection">条码方向</string>
    <string name="ErrorCorrection">纠错比率</string>
    <string name="AntiColor">反色选择</string>
    <string name="BarCodeContent">条码内容</string>
    <string name="ClockNumber">时钟编号</string>
    <string name="ClockFormat">时钟格式</string>
    <string name="timeoffset">时间偏移</string>
    <string name="ClassCode">班次代码</string>
    <string name="EndTime">结束时间</string>
    <string name="starttime">开始时间</string>
    <string name="ClickSettings">点击设置</string>
    <string name="ImportingFromUDisk">从U盘导入</string>
    <string name="Updatesuccess">更新成功</string>
    <string name="Wordwidth">字宽不符合要求,请重新输入</string>
    <string name="RepeatError">重复次数和重复间隔有误,请重新输入</string>
    <string name="PleaseStopPrinting">请先停止打印!</string>
    <string name="PleaseEnte">请输入服务密码</string>
    <string name="NormalEquipment">设备正常运行</string>
    <string name="ChangeInkBOx">墨量底,请更换墨盒!</string>
    <string name="MachineStoppage">机器故障</string>
    <string name="Printstop">打印停止</string>
    <string name="Beingstarted">正在启动</string>
    <string name="Printreadiness">打印就绪</string>
    <string name="printnow">正在打印</string>
    <string name="PrintPause">打印暂停</string>
    <string name="Printfailure">打印故障</string>
    <string name="machinetrouble">机器存在故障,请检查后点击重连!</string>
    <string name="Continue">继续</string>
    <string name="Stop">停止</string>
    <string name="StartPrinting">是否开始打印?</string>
    <string name="SuspendPrinting">是否暂停打印</string>
    <string name="operation">请选择要进行的操作?</string>
    <string name="PleaseWait">打印准备中,请稍等!!</string>
    <string name="AlreadyPrinted">已打印</string>
    <string name="PleaseChoose">请选择</string>
    <string name="text">文本</string>
    <string name="Clock">时钟</string>
    <string name="SerialNumber">序号</string>
    <string name="serialport">串口</string>
</resources>